src/test/ui/issues/issue-24446.stderr
error[E0277]: the size for values of type `(dyn Fn() -> u32 + 'static)` cannot be known at compilation time
  --> $DIR/issue-24446.rs:2:17
   |
LL |     static foo: dyn Fn() -> u32 = || -> u32 {
   |                 ^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Fn() -> u32 + 'static)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
